# AEvolution

./: .gitignore  README.md  README_dev.md
AEvolution/AEvolutionPlugin/: AEvolution.cpp  AEvolution.h  AEvolution_PiPL.r  Commands.h  Library.cpp  Library.h  SessionManager.cpp  SessionManager.h  SuitesManager.h  UUID.hpp  commandnames.txt  itemCommands.h  main.cpp  main.h
AEvolution/AEvolutionPlugin/Core/: Collections.h  Comps.cpp  Comps.h  Effects.h  Footage.h  Items.h  Layers.h  Markers.h  Projects.h  Render.h  RenderOptions.h  Utilities.h  Worlds.h
AEvolution/AEvolutionPlugin/CoreLib/: App.cpp  App.h  CoreUtils.h  ItemManager.cpp  ItemManager.h  PyCore.cpp
AEvolution/AEvolutionPlugin/CoreSDK/: CollectionSuites.h  Core.cpp  Core.h  ItemSuites.cpp  ItemSuites.h  LayerSuites.cpp  LayerSuites.h  MessageQueue.h  SuiteManager.h  TaskUtils.h  Utils.h
AEvolution/AEvolutionPlugin/PyUtils/: MessageManager.h
AEvolution/AEvolutionPlugin/Win/: AEvolution.sln  AEvolution.vcxproj  AEvolution.vcxproj.filters  AEvolution_PiPL.rc  CMakeLists.txt  CoreUtils.cpp
AEvolutionBindsTEMPLATE/: CMakeLists.txt
AEvolutionBindsTEMPLATE/Project/: AEvolutionTEMPLATE.sln  Project.vcxproj  Project.vcxproj.filters
AEvolutionBindsTEMPLATE/src/: AppObject.cpp  AppObject.h  CollectionWraps.cpp  CollectionWraps.h  Collections.cpp  Collections.h  ItemObjects.cpp  ItemObjects.h  ItemWraps.cpp  ItemWraps.h  LayerObject.h  MessageQueueManager.h  ProjectObject.cpp  ProjectObject.h  Source.cpp  pch.h
AEvolutionCore/: AEvolutionCore.sln  CMakeLists.txt
AEvolutionCore/AEvolutionCore/: AEvolutionCore.vcxproj  AEvolutionCore.vcxproj.filters  App.cpp  CMakeLists.txt  Collections.cpp  Collections.h  Comps.cpp  Comps.h  Core.cpp  Effects.cpp  Effects.h  Footage.cpp  Footage.h  ItemManager.cpp  Items.cpp  Items.h  Layers.cpp  Layers.h  MessageQueue.cpp  Project.cpp  Projects.cpp  Projects.h  Source.cpp  Utilities.cpp  Utilities.h  Utility.cpp  cpp.hint  pch.cpp  pch.h
AEvolutionCore/AEvolutionCore/Core/: Collections.cpp  Collections.h  Comps.cpp  Comps.h  Effects.cpp  Effects.h  Footage.cpp  Footage.h  Items.cpp  Items.h  Layers.cpp  Layers.h  Markers.h  Projects.cpp  Projects.h  Render.h  RenderOptions.h  Utilities.cpp  Utilities.h  Worlds.h
AEvolutionCore/AEvolutionCore/include/: App.h  Core.h  ItemManager.h  MessageQueue.h  Project.h  UUID.hpp  Utility.h
AEvolutionPlugin/Project/Win/: AEvolutionPlugin_Win.sln  Project.vcxproj  Project.vcxproj.filters  Project.vcxproj.settings  cpp.hint
AEvolutionPlugin/src/: AE_GeneralWrap.cpp  AE_GeneralWrap.h  AEnums.cpp  AEnums.h  AEvolution.cpp  AEvolution.h  CollectionCommands.h  CommandFactory.h  Commands.cpp  Commands.h  CompCommands.h  Items.cpp  MessageMain.h  MessageQueueManager.h  SessionManager.h  UtilityCommands.h  headers.py  itemCommands.h  main.cpp  main.h
AEvolutionPlugin/src/commands/: CollectionCommands.h  CompCommands.cpp  CompCommands.h  FootageCommands.cpp  FootageCommands.h  ItemCommands.cpp  ItemCommands.h  Items.h  LayerCommands.cpp  LayerCommands.h  ProjectCommands.cpp  ProjectCommands.h  StreamCommands.h  UtilityCommands.cpp  UtilityCommands.h
AEvolutionPlugin/src/responses/: CompResponses.h  FootageResponses.h  ItemResponses.h  LayerResponses.h  ProjectResponses.h  UtilityResponses.h
AEvolutionPy/: AEvolutionPy.sln  CMakeLists.txt
AEvolutionPy/AEvolutionPy/: AEvolutionPy.vcxproj  AEvolutionPy.vcxproj.filters  App.cpp  App.h  Base.h  CMakeLists.txt  Collection.cpp  Collection.h  Comp.cpp  Comp.h  Folder.cpp  Folder.h  Footage.h  Item.cpp  Item.h  Layer.cpp  Layer.h  MessageQueue.cpp  MessageQueue.h  Project.cpp  Project.h  PyCore.cpp  PyCore.h  Source.cpp  pch.h
AEvolutionTemplate/: AEvolutionTemplate.sln
AEvolutionTemplate/AEvolutionTemplate/: AEvolutionTemplate.vcxproj  AEvolutionTemplate.vcxproj.filters  CMakeLists.txt  ItemWraps.cpp  ItemWraps.h  Source.cpp  pch.h
AEvolutionTemplate/Project/: Project.vcxproj  Project.vcxproj.filters  Project.vcxproj.settings
AEvolutionTemplate/src/: MessageQueueManager.h
Project/: Main.vcxproj.personal  Main.vcxproj.settings
src/Headers/: AE_GeneralPlug.h
